# isoshade

./: .gitignore  README  README.md
functions/: README  barthsextic.fun  blobs_vol.fun  devil.fun  mihelich.fun
launchers/win/: launch.bat  launch_anim.bat  launch_external_function.bat  launch_external_function_nograd.bat  launch_external_function_nograd_vol.bat
launchers/x/: launch.sh  launch_anim.sh  launch_external_function.sh  launch_external_function_nograd.sh  launch_external_function_nograd_vol.sh
src/: CMakeLists.txt  iso-time.frag  iso-time.vert  iso.frag  iso.vert  isoshade.cpp  launch.bat  launch_anim.bat  launch_external_function.bat  launch_external_function_nograd.bat  launch_external_function_nograd_vol.bat  traceandshade.frag  traceandshade_nograd.frag  traceandshade_vol_nograd.frag
src/colormaps/: red_blue.txt  rgb.txt
src/functions/: barthdecic_vol.fun  barthsextic.fun  barthsextic_vol.fun  blobs_vol.fun  bretzel.fun  devil.fun  devil_vol.fun  doubletorus.fun  drop.fun  funtorus.fun  isofun1.frag  isofun2.frag  isofun2_nograd.frag  mihelich.fun  tangle.fun
src/material_shaders/: colormap.material.frag  gradient.material.frag  gradient_colormap.material.frag  phong_colormap.material.frag
